--- a/package.json
+++ b/package.json
@@ -5,28 +5,29 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "post-update": "yarn upgrade --latest"
+    "post-update": "yarn upgrade --latest",
+    "format": "prettier --write \"pages/**/*.{js,jsx,ts,tsx,css,scss}\""
   },
   "dependencies": {
-    "@adaptabletools/adaptable-react-aggrid": "^16.1.0",
-    "@ag-grid-community/core": "30.1.0",
-    "@ag-grid-community/styles": "30.1.0",
-    "@ag-grid-community/client-side-row-model": "30.1.0",
-    "@ag-grid-enterprise/side-bar": "30.1.0",
-    "@ag-grid-enterprise/column-tool-panel": "30.1.0",
-    "@ag-grid-enterprise/filter-tool-panel": "30.1.0",
-    "@ag-grid-enterprise/status-bar": "30.1.0",
-    "@ag-grid-enterprise/menu": "30.1.0",
-    "@ag-grid-enterprise/range-selection": "30.1.0",
-    "@ag-grid-enterprise/rich-select": "30.1.0",
-    "@ag-grid-enterprise/excel-export": "30.1.0",
-    "@ag-grid-enterprise/row-grouping": "30.1.0",
-    "@ag-grid-enterprise/clipboard": "30.1.0",
-    "@ag-grid-enterprise/viewport-row-model": "30.1.0",
-    "@ag-grid-enterprise/server-side-row-model": "30.1.0",
-    "@ag-grid-enterprise/master-detail": "30.1.0",
-    "@ag-grid-enterprise/sparklines": "30.1.0",
-    "@ag-grid-community/react": "30.1.0",
+    "@adaptabletools/adaptable-react-aggrid": "16.2.0",
+    "@ag-grid-community/client-side-row-model": "30.2.1",
+    "@ag-grid-community/core": "30.2.1",
+    "@ag-grid-community/react": "30.2.1",
+    "@ag-grid-community/styles": "30.2.1",
+    "@ag-grid-enterprise/clipboard": "30.2.1",
+    "@ag-grid-enterprise/column-tool-panel": "30.2.1",
+    "@ag-grid-enterprise/excel-export": "30.2.1",
+    "@ag-grid-enterprise/filter-tool-panel": "30.2.1",
+    "@ag-grid-enterprise/master-detail": "30.2.1",
+    "@ag-grid-enterprise/menu": "30.2.1",
+    "@ag-grid-enterprise/range-selection": "30.2.1",
+    "@ag-grid-enterprise/rich-select": "30.2.1",
+    "@ag-grid-enterprise/row-grouping": "30.2.1",
+    "@ag-grid-enterprise/server-side-row-model": "30.2.1",
+    "@ag-grid-enterprise/side-bar": "30.2.1",
+    "@ag-grid-enterprise/sparklines": "30.2.1",
+    "@ag-grid-enterprise/status-bar": "30.2.1",
+    "@ag-grid-enterprise/viewport-row-model": "30.2.1",
     "@alexanderjeurissen/use-storybook": "^2.0.5",
     "@aws-sdk/client-s3": "^3.321.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
@@ -41,9 +42,9 @@
     "@wundergraph/react-query": "^0.9.6",
     "@xstate/immer": "^0.3.1",
     "@xstate/react": "^3.0.1",
-    "ag-grid-community": "30.1.0",
-    "ag-grid-enterprise": "30.1.0",
-    "ag-grid-react": "30.1.0",
+    "ag-grid-community": "30.2.1",
+    "ag-grid-enterprise": "30.2.1",
+    "ag-grid-react": "30.2.1",
     "aws-sdk": "^2.1365.0",
     "core-js": "^3.6.5",
     "country-state-city": "^3.1.2",
@@ -86,6 +87,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "20.9.4",
+    "prettier": "^3.1.0",
     "typescript": "5.3.2"
   }
 }
