--- a/package.json
+++ b/package.json
@@ -39,12 +39,11 @@
     "@tanstack/react-query": "^4.22.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/dagre": "^0.7.48",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@wundergraph/react-query": "^0.9.6",
     "@xstate/immer": "^0.3.1",
     "@xstate/react": "^3.0.1",
-    "ag-grid-community": "30.2.1",
-    "ag-grid-enterprise": "30.2.1",
-    "ag-grid-react": "30.2.1",
     "aws-sdk": "^2.1365.0",
     "core-js": "^3.6.5",
     "country-state-city": "^3.1.2",
